# fast-api-example

./: Dockerfile  docker-compose-local.yml  pyproject.toml  readme.md
example/: api.py  celery_worker.py  config.py
example/routers/: example.py
