[tool.poetry]
name = "ExampleApiWithCelery"
version = "0.1.0"
description = "API and Task Queue Example Application"
authors = ["Joachim CARDOEN <youwish@google.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
flower = "^1.0.0"
celery = {extras = ["redis"], version = "^5.1.2"}
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
watchdog = {extras = ["watchmedo"], version = "^2.1.6"}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
